<resources>
    <string name="app_name">크누챗</string>
    <!--LoginActivity-->
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="verify_info">통합정보시스템 계정으로 경대생 인증 후 이용 가능합니다</string>
    <string name="verify">인증</string>
    <string name="login_fail">로그인 실패</string>
    <string name="login_fail_empty_id">아이디를 입력하세요</string>
    <string name="login_fail_empty_pw">비밀번호를 입력하세요</string>
    <string name="login_require_change_pw">계정 비밀번호를 변경해야합니다.\n비밀번호 변경 후 로그인해주세요.</string>

    <!--SignInActivity-->
    <string name="user_profile_image_pick">프로필사진을 정해주세요.</string>
    <string name="user_profile_image_null">프로필사진이 선택되지 않았습니다.</string>
    <!--MainActivity-->
    <string name="open_chat_create">방 만들기</string>
    <string name="open_chat_search">방 검색하기</string>
    <string name="tab_my_chat_rooms">내 채팅방</string>
    <string name="tab_other_chat_rooms">둘러보기</string>
    <string name="enter">참여하기</string>
    <string name="room_info">이 채팅방은 다음의 정보를 상호 공개하는 채팅방입니다.</string>
    <string name="room_info_anonymous">이 채팅방은 익명 채팅방입니다.</string>
    <string name="no_data_available"> 보여줄 방이 없어요!</string>no_data_available
    <!--CreateActivity-->
    <string name="profile_image_set">채팅방 배경사진을 등록해주세요</string>
    <string name="user_permission_failed">권한 획득 실패</string>
    <string name="user_permission_failed_message">권한 없이는 어플을 사용할 수 없습니다.</string>
    <string name="user_permission_allow">허용</string>
    <string name="user_permission_deny">거부(종료)</string>
    <string name="user_profile_image_back">프로필사진이 선택되지 않았습니다.</string>

    <string name="open_chat_name">채팅방 이름</string>
    <string name="open_chat_description">채팅방 소개</string>
    <string name="open_information">공개정보</string>
    <string name="max">최대인원</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="sex">성별</string>
    <string name="student_number">학번</string>
    <string name="department">학부</string>
    <string name="create">만들기</string>
    <string name="create_fail_empty_name">채팅방 이름을 적어주세요.</string>
    <string name="create_fail_empty_description">채팅방 소개를 적어주세요.</string>
    <string name="return_to_main">메인화면으로</string>
    <string name="return_to_main_message">작성 중인 정보는 지워집니다.</string>

    <!--ChatActivity-->
    <string name="set_profile">프로필 설정</string>
    <string name="upload_fail">등록 실패</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="members">대화상대</string>
    <string name="chat_message_input">메세지 쓰기...</string>
    <string name="chat_message_send">전송</string>
    <string name="chat_message">메시지</string>
    <string name="chat_time">시간</string>
    <string name="chat_nick_name">닉네임</string>
    <string name="chat_notice">알림</string>
    <!--Common-->

    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
</resources>

