<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewNickNameOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_nick_name"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfileOther"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfileOther"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/img_default_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNickNameOther" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chatMessageOther"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/chat_bubble_u"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfileOther"
        app:layout_constraintTop_toBottomOf="@id/textViewNickNameOther">

        <TextView
            android:id="@+id/textViewMessageOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="13"
            android:maxLength="100"
            android:text="@string/chat_message"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTimeOther"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTimeOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_time"
            android:textColor="@color/grey"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textViewNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_notice"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/chat_notice"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/chatMessageI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_bubble_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewMessageI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="13"
            android:maxLength="100"
            android:text="@string/chat_message"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTimeI"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTimeI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_time"
            android:textColor="@color/grey"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>